--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,2 +1,15 @@
+# Banco em memória para testes
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=false
+
+spring.h2.console.enabled=false
+
+# JWT
 jwt.secret=kOTSzer1eR5FO3PDFJlM1sxNxPvSPSVdv2/6Tq4f99c=
 jwt.expiration=3600000
