Fix:changes in the construction of the project

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -11,5 +11,9 @@ spring.jpa.show-sql=false
 spring.h2.console.enabled=false
 
 # JWT
-jwt.secret=kOTSzer1eR5FO3PDFJlM1sxNxPvSPSVdv2/6Tq4f99c=
+jwt.secret=gcKkYpSuVFoEy7neuSQZ9V8GeWJNbeSdyrHj1Josh7E=
 jwt.expiration=3600000
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=always
