--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
-spring.application.name=investment-control
+spring.application.name=investiment-control
+
+# Banco em mem\uFFFDria para testes
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=false
+
+spring.h2.console.enabled=false
+
+# JWT
+jwt.secret=gcKkYpSuVFoEy7neuSQZ9V8GeWJNbeSdyrHj1Josh7E=
+jwt.expiration=3600000
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=always
